uploading new version

--- a/mongobackup.conf
+++ b/mongobackup.conf
@@ -1,34 +1,54 @@
 #!/bin/bash
 
-# User to connect on mongodb, empty = no user
+# User to connect on mongodb, empty = no user , default = no user
 MONGO_USER=""
-# Password to connect on mongodb , empty = no password
+# Password to connect on mongodb , empty = no password , default = no password
 MONGO_PASS=""
-# mongodump path
+# mongodump path , default use $PATH to find
 MONGODUMP_PATH="/usr/bin/mongodump"
-# mongo path
+# mongo path , default use $PATH to find
 MONGOCLIENT_PATH="/usr/bin/mongo"
 # mongo server
 MONGO_HOST="127.0.0.1"
 # mongo port
 MONGO_PORT="27017"
-# databases to do backup, empty = all databases
+# databases to do backup, empty = all databases , default = all databases
 MONGO_DATABASE=""
-# options to compress [bzip2|gzip] , empty = no compress
-COMPRESS="bzip2"
+# options to compress [bzip2|gzip] , empty = no compress , default = disabled
+COMPRESS="gzip"
 # Format to make date
 TIMESTAMP=`date +%F-%H%M`
 # Log File
 LOG_FILE="/var/log/mongobackup.log"
 # Directory where store backups
 BACKUP_DIR="."
-# database to log in when will make the backup , empty = default ( usually is test )
+# database to log in when will make the backup , default = test
 DB_ADMIN=""
 # Add any additional mongodump options here
 MONGO_DUMP_OPTIONS=""
-DEBUG="1"
-# upload backup on S3 , empty = deactive
-# Enable S3 store support, 1 = enabled , 0 = disabled
-S3="0"
-S3_BUCKET_NAME="" # replace with your bucket name on Amazon S3
-S3_BUCKET_PATH="" # replace with your bucket path
+# Lock writes on base before back up , default = 0
+LOCK_WRITES="0"
+# Auto pick up a slave to back up , default = 0
+AUTO_PICK_SLAVE="0"
+# Debug mode: 1 = enabled , 0 = disabled , default = 0
+DEBUG="0"
+# maximum days for old backups ( local )
+MAX_DAYS_LOCAL="0"
+# Enable S3 store support, 1 = enabled , 0 = disabled ,  default = 0
+# S3="0"
+# S3CMD="/usr/bin/s3cmd"
+# S3_BUCKET_NAME="replace-by-your-bucket-name" #replace with your bucket name on Amazon S3
+# S3_BUCKET_PATH="replace-by-your-bucket-path"
+
+# Enable rsync store support, 1 = enabled , 0 = disabled , default = 0
+# RSYNC="0"
+# specific rsync path , default use $PATH to find
+# RSYNC_PATH="/usr/bin/rsync"
+# RSYNC_OPTS="-auvvz"
+# REMOTE_USER="replace-by-your-user"
+# REMOTE_HOST="replace-by-your-host"
+# REMOTE_MODULE="replace-by-your-rsync-modulename"
+## you can use just the module name
+# REMOTE_MODULE="/backup"
+# or use the module name and the next directory
+# REMOTE_MODULE="/backup/dumps_mongodb
