Add comment on auto pick up slave.
add comment to enabled and disabled.

--- a/mongobackup.conf
+++ b/mongobackup.conf
@@ -26,9 +26,9 @@ BACKUP_DIR="."
 DB_ADMIN=""
 # Add any additional mongodump options here
 MONGO_DUMP_OPTIONS=""
-# Lock writes on base before back up , default = 0
+# Lock writes on base before back up , 1 = enabled, 2 = disabled , default = 0
 LOCK_WRITES="0"
-# Auto pick up a slave to back up , default = 0
+# Auto pick up a slave to back up , 1 = enabled, 2 = disabled, default = 0
 AUTO_PICK_SLAVE="0"
 # Debug mode: 1 = enabled , 0 = disabled , default = 0
 DEBUG="0"
